the start of a user quota
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6228 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -453,4 +453,10 @@
 	<data name="REMOVE">
 		<value>Remove</value>
 	</data>
+	<data name="FORMAT.SPACEUSED">
+		<value>{0} of Space Used</value>
+	</data>
+	<data name="FORMAT.SPACEUSEDAVAILABLE">
+		<value>{0} of Space Used / {1} of Space Available</value>
+	</data>
 </root>
