--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -174,6 +174,9 @@
 	<data name="FILESIZE">
 		<value>File Size</value>
 	</data>
+	<data name="FILETYPEALREADYEXISTS">
+		<value>The specified file name already exists in the list.</value>
+	</data>
 	<data name="FIRST">
 		<value>First</value>
 	</data>
