Started breadcrumb implementation.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6262 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -207,6 +207,9 @@
 	<data name="HELP">
 		<value>Help</value>
 	</data>
+	<data name="HOME">
+		<value>Home</value>
+	</data>
 	<data name="HUNGARIAN">
 		<value>Hungarian</value>
 	</data>
