bug fixes and description edit
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6285 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -474,4 +474,7 @@
     <data name="FILEHISTORY">
         <value>File History</value>
     </data>
+    <data name="EDIT">
+        <value>Edit</value>
+    </data>
 </root>
