Finished breadcrumb implementation.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6290 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -45,6 +45,12 @@
 	<data name="ADD">
 		<value>Add</value>
 	</data>
+	<data name="ADDADMINS">
+		<value>Add Administrators</value>
+	</data>
+	<data name="ADDMEMBERS">
+		<value>Add Members</value>
+	</data>
 	<data name="ADMIN">
 		<value>Admin</value>
 	</data>
