Added current logged in user message.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6292 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -282,6 +282,9 @@
 	<data name="LIMITTAG">
 		<value>Limit:</value>
 	</data>
+	<data name="LOGGEDINAS">
+		<value>Logged in as {0}</value>
+	</data>
 	<data name="LOGIN">
 		<value>Log In</value>
 	</data>
