--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -117,6 +117,9 @@
 	<data name="DESCRIPTIONTAG">
 		<value>Description:</value>
 	</data>
+	<data name="DIRECTORIESTAG">
+		<value>Directories:</value>
+	</data>
 	<data name="DISABLE">
 		<value>Disable</value>
 	</data>
@@ -179,6 +182,9 @@
 	</data>
 	<data name="FILES">
 		<value>Files</value>
+	</data>
+	<data name="FILESTAG">
+		<value>Files:</value>
 	</data>
 	<data name="FILESIZE">
 		<value>File Size</value>
@@ -363,6 +369,9 @@
 	<data name="MINUTES">
 		<value>Minute(s)</value>
 	</data>
+	<data name="MODIFIEDTAG">
+		<value>Modified:</value>
+	</data>
 	<data name="NAME">
 		<value>Name</value>
 	</data>
@@ -470,9 +479,6 @@
 	</data>
 	<data name="SHARED">
 		<value>Shared</value>
-	</data>
-	<data name="SHAREDTAG">
-		<value>Shared:</value>
 	</data>
 	<data name="SIZE">
 		<value>Size</value>
