Changed the page footer for all pages.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6295 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -289,7 +289,7 @@
 		<value>Limit:</value>
 	</data>
 	<data name="LOGGEDINAS">
-		<value>Logged in as {0}</value>
+		<value>Logged in as</value>
 	</data>
 	<data name="LOGIN">
 		<value>Log In</value>
