Fixed some display problems with IE. Started implementing error handling around input and web calls.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6296 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -150,6 +150,12 @@
 	<data name="EQUALS">
 		<value>Equals</value>
 	</data>
+	<data name="ERRORCANNOTCHANGERIGHTS">
+		<value>Cannot change membership rights for user {0}.</value>
+	</data>
+	<data name="ERRORCANNOTCREATEUSER">
+		<value>Cannot create user.</value>
+	</data>
 	<data name="ERRORINVALIDQUOTA">
 		<value>An invalid disk space quota value was specified.</value>
 	</data>
