https://bugzilla.novell.com/show_bug.cgi?id=167885
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6300 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -256,7 +256,7 @@
         <value>Unable to communicate with the iFolder server securely.</value>
     </data>
     <data name="ENTRY.LOCKEXCEPTION">
-        <value>The upload was cancelled because the iFolder has been locked by the administrator.</value>
+        <value>The operation was cancelled because the iFolder has been locked/disabled by the administrator.</value>
     </data>
     <data name="ENTRY.ENTRYINVALIDNAME">
         <value>The specified name is invalid.</value>
