--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -489,4 +489,7 @@
     <data name="NO">
         <value>No</value>
     </data>
+    <data name="FILTER">
+        <value>Filter</value>
+    </data>
 </root>
