Fixed bug 167913. The error handling for typo's in the policy fields reports the error in page.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6315 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -168,7 +168,7 @@
 	<data name="ERRORCANNOTCREATEUSER">
 		<value>Cannot create user.</value>
 	</data>
-	<data name="CANNOTDELETEIFOLDER">
+	<data name="ERRORCANNOTDELETEIFOLDER">
 		<value>Cannot delete iFolder.</value>
 	</data>
 	<data name="ERRORCANNOTDELETEMEMBERS">
@@ -227,6 +227,9 @@
 	</data>
 	<data name="ERRORCANNOTSETUSERPOLICY">
 		<value>Cannot set user policy information for user ID {0}.</value>
+	</data>
+	<data name="ERRORINVALIDARGUMENT">
+		<value>An invalid value was specified for a policy.</value>
 	</data>
 	<data name="ERRORINVALIDQUOTA">
 		<value>An invalid disk space quota value was specified.</value>
