added iFolder list categories for the "Inbox" requirement
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6328 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -501,4 +501,10 @@
 	<data name="CREATED">
 		<value>Created</value>
 	</data>
+	<data name="ALL">
+		<value>All</value>
+	</data>
+	<data name="SHARED">
+		<value>Shared</value>
+	</data>
 </root>
