Added code to detect when the session has terminated. Set the session timeout to 20 minutes.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6343 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -552,6 +552,9 @@
 	<data name="SERVERS">
 		<value>Servers</value>
 	</data>
+	<data name="SESSIONCLOSED">
+		<value>Your session has been closed. Please log in.</value>
+	</data>
 	<data name="SET">
 		<value>Set</value>
 	</data>
