Changed the breadcrumb separator.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6347 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -82,7 +82,7 @@
 		<value>Begins With</value>
 	</data>
 	<data name="BREADCRUMBSEPARATOR">
-		<value>|</value>
+		<value>&#124;</value>
 	</data>
 	<data name="CANCEL">
 		<value>Cancel</value>
