minor look and usability changes
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6348 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -519,4 +519,7 @@
     <data name="OWNED">
         <value>Owned</value>
     </data>
+    <data name="QUOTA">
+        <value>Quota</value>
+    </data>
 </root>
