changed text for Victor
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6349 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -522,4 +522,7 @@
     <data name="QUOTA">
         <value>Quota</value>
     </data>
+    <data name="REMOVEMEMBERSHIP">
+        <value>Remove Membership</value>
+    </data>
 </root>
