https://bugzilla.novell.com/show_bug.cgi?id=170459
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6352 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -54,6 +54,9 @@
     <data name="ENTRY.CONFIRMDELETE">
         <value>Are you sure you want to delete the selected items?</value>
     </data>
+    <data name="IFOLDER.CONFIRMCHANGEOWNER">
+        <value>Are you sure you want to give up ownership of this iFolder?</value>
+    </data>
     <data name="LOGIN.ERROR">
         <value>Error:</value>
     </data>
