--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -528,4 +528,7 @@
     <data name="REMOVEMEMBERSHIP">
         <value>Remove Membership</value>
     </data>
+    <data name="REMOVEMYMEMBERSHIP">
+        <value>Remove My Membership</value>
+    </data>
 </root>
