https://bugzilla.novell.com/show_bug.cgi?id=171946 https://bugzilla.novell.com/show_bug.cgi?id=172005
added setting for page size
misc search improvements



git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6365 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -516,4 +516,16 @@
     <data name="REMOVEMEMBERSHIP">
         <value>Remove Membership</value>
     </data>
+    <data name="SETTINGS">
+        <value>Settings</value>
+    </data>
+    <data name="PAGESIZE">
+        <value>Page Size</value>
+    </data>
+    <data name="FIRSTLASTNAMESEP">
+        <value>&amp;nbsp;</value>
+    </data>
+    <data name="LASTFIRSTNAMESEP">
+        <value>,&amp;nbsp;</value>
+    </data>
 </root>
