1. fixed a bug with old stores and multi-server/Makefile 2. removed checkboxs from iFolders page and added the actions group 3. create item history for Members and Files (but Members on hold because of lack of information in events. 4. added new Journal information about Members.aspx
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6401 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -459,9 +459,6 @@
     <data name="CLOSE">
         <value>Close</value>
     </data>
-    <data name="FILEHISTORY">
-        <value>File History</value>
-    </data>
     <data name="EDIT">
         <value>Edit</value>
     </data>
@@ -527,5 +524,8 @@
     </data>
     <data name="LASTFIRSTNAMESEP">
         <value>,&amp;nbsp;</value>
+    </data>
+    <data name="ACTIONS">
+        <value>Actions</value>
     </data>
 </root>
