improved quota with iFolder context and added the quota control to the upload page
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6403 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -528,4 +528,10 @@
     <data name="ACTIONS">
         <value>Actions</value>
     </data>
+    <data name="IFOLDERQUOTA">
+        <value>iFolder Quota</value>
+    </data>
+    <data name="HOMEQUOTA">
+        <value>My Quota</value>
+    </data>
 </root>
