moved some global actions to the left
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6404 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -534,4 +534,7 @@
     <data name="HOMEQUOTA">
         <value>My Quota</value>
     </data>
+    <data name="DELETEIFOLDER">
+        <value>Delete iFolder</value>
+    </data>
 </root>
