Starting on the reporting features.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6408 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/iFolderAdmin.resx
+++ b/simias/src/admin/iFolderAdmin.resx
@@ -537,6 +537,9 @@
 	<data name="REMOVEMEMBERS">
 		<value>Remove Users</value>
 	</data>
+	<data name="REPORTS">
+		<value>Reports</value>
+	</data>
 	<data name="RETYPEPASSWORDTAG">
 		<value>Retype Password:</value>
 	</data>
