detail page updates
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6413 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -537,4 +537,10 @@
     <data name="DELETEIFOLDER">
         <value>Delete iFolder</value>
     </data>
+    <data name="PROPERTIES">
+        <value>Properties</value>
+    </data>
+    <data name="POLICY">
+        <value>Policy</value>
+    </data>
 </root>
