1. nicer multi-file upload 2. allow link underlines
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6442 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/iFolderWeb.resx
+++ b/simias/src/webaccess/iFolderWeb.resx
@@ -543,4 +543,7 @@
     <data name="POLICY">
         <value>Policy</value>
     </data>
+    <data name="FILES.REMOVE">
+        <value>remove</value>
+    </data>
 </root>
